# devBooster

./: .gitignore  Dockerfile  LICENSE  README.md  config-ai.yaml  devbooster-k8s.yaml  pyproject.toml  requirements.txt  service-ai.yaml
config/: column_rules.txt  prefix_rules.txt
examples/: test_simple.xlsx  test_simple_ai.xlsx
scripts/: create_sample_excel.py
src/dev_booster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/devbooster/: __init__.py
src/devbooster/api/: main.py
src/devbooster/cli/: app.py
src/devbooster/config/: config_loader.py
src/devbooster/config_data/: pk_rules.txt  table_rules.txt  table_whitelist.txt
src/devbooster/core/: ai_analyzer.py  analyzer.py  models.py  parser.py  renderer.py  writer.py
src/devbooster/templates/egov/oracle/: controller.java.j2  mapper.java.j2  mapper.xml.j2  service.java.j2  service_impl.java.j2  vo.java.j2
test/: test_parser.py
tests/: test_analyzer.py  test_config.py  test_validation.py
